vpc.tf
resource "aws_vpc" "rafmme_vpc" {
  cidr_block = "${var.vpc_cidr}"
  enable_dns_hostnames = true
  tags {
      Name = "rafmme_aws_vpc"
  }
}
